Gave navbar links a fixed width to avoid content shifting

--- a/src/components/react/SiteHeader/SiteHeaderStyleOverrides.css
+++ b/src/components/react/SiteHeader/SiteHeaderStyleOverrides.css
@@ -84,7 +84,8 @@ nav.neo-navbar .neo-nav--left .neo-badge__navbutton .topnav-menu-toggle:hover {
 
 @media (max-width: 320px) {
   nav.neo-navbar .neo-nav {
-    padding: 0 9px;
+    /* padding: 0 9px; */
+    display: none;
   }
   nav.neo-navbar .neo-nav a.neo-nav-link-btn {
     width: auto;
@@ -112,4 +113,9 @@ nav.neo-navbar .neo-nav--left .neo-badge__navbutton .topnav-menu-toggle:hover {
 
 .neo-nav--left .neo-skipnav:focus {
   top: 7px;
+}
+
+nav.neo-navbar a.neo-nav-link-btn {
+  width: 7.5rem;
+  justify-content: center;
 }
